# git-autosnap

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.test  README.md  Taskfile.yml  implementation_plan.md  lefthook.yml  rustfmt.toml
.github/: renovate.json
.github/workflows/: ci.yml  lint.yml
docs/: spec.md  style.md  testing.md
src/: cli.rs  config.rs  daemon.rs  gitlayer.rs  lib.rs  main.rs  process.rs  watcher.rs
src/app/: context.rs
src/commands/: compact.rs  diff.rs  gc.rs  init.rs  logs.rs  mod.rs  once.rs  restore.rs  shell.rs  start.rs  status.rs  stop.rs  uninstall.rs
src/core/: mod.rs
src/core/git/: compact.rs  diff.rs  gc.rs  index.rs  mod.rs  ops_lock.rs  repo.rs  restore.rs  shell.rs  snapshot.rs
src/core/runtime/: daemon.rs  mod.rs  process.rs  watcher.rs
src/logging/: init.rs  mod.rs  view.rs
tests/: cli_help.rs  compact_command.rs  compact_locking.rs  config_load.rs  container_smoke.rs  daemon_lifecycle.rs  diff_command.rs  edge_cases.rs  error_conditions.rs  exclude_init.rs  interactive_mode.rs  pid_lock.rs  restore_command.rs  shell_command.rs  signal_handling.rs  snapshot_gc.rs  uninstall_command.rs  watcher_module.rs
tests/support/: mod.rs  tc_exec.rs
