[package]
name = "git-autosnap"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[features]
default = []
container-tests = []

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dependencies]
anyhow = "=1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
git2 = "0.20.2"
tokio = "=1.47.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
watchexec = "8.0.1"
watchexec-filterer-ignore = "7.0.0"
ignore-files = "3.0.4"
fs2 = "0.4.3"
time = { version = "0.3.36", features = ["formatting", "local-offset"] }
tempfile = "=3.21.0"
skim = "0.20.5"
watchexec-signals = "5.0.0"
console = "0.16.0"
watchexec-events = "6.0.0"
nix = { version = "0.30.1", features = ["signal"] }
tracing-appender = "0.2.3"

[dev-dependencies]
assert_cmd = "=2.0.17"
predicates = "=3.1.3"
tempfile = "=3.21.0"
shell-escape = "=0.1.5"
testcontainers = "=0.25.0"
anyhow = { version = "=1.0.99", features = ["std"] }
tokio = { version = "=1.47.1", features = ["macros", "rt-multi-thread"] }
